--- a/Api.Service/Service.csproj
+++ b/Api.Service/Service.csproj
@@ -1,5 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\api.domain\Domain.csproj" />
+    <ProjectReference Include="..\api.data\Data.csproj" />
+    <ProjectReference Include="..\api.crosscutting\CrossCutting.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
