refernciando service,domain e crosscuting a api.aplication

--- a/Api.Application/application.csproj
+++ b/Api.Application/application.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\api.domain\Domain.csproj" />
+    <ProjectReference Include="..\api.service\Service.csproj" />
+    <ProjectReference Include="..\api.crosscutting\CrossCutting.csproj" />
+  </ItemGroup>
+
 </Project>
